--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* NICE RPS
 body {
     background-color: rgb(220, 191, 191);
 }
@@ -13,7 +14,8 @@ body {
     outline: none;
     cursor: pointer; 
     transition: 100ms;
-    font-size: 2rem;
+    font-size: 8rem;
+    margin: 40px;
 }
 
 .selection:hover {
@@ -25,7 +27,7 @@ body {
     margin-top: 2rem;
     justify-content: center;
     justify-items: center;
-     /* 2 column grid that is equal in size (1fr) */
+    align-items: center;
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -43,3 +45,5 @@ body {
     opacity: 1;
     font-size: 1rem;
 }
+*/
+
